--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -38,6 +38,10 @@ RUN mkdir /var/www/.config && \
     touch /var/www/.yarnrc && \
     chmod 777 /var/www/.yarnrc
 
+# Graphviz
+RUN apt-get update && \
+    apt-get install -y graphviz
+
 # CLEAN
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
