--- a/config/packages/old_sound_rabbit_mq.yaml
+++ b/config/packages/old_sound_rabbit_mq.yaml
@@ -22,6 +22,12 @@ old_sound_rabbit_mq:
         mail_update_account:
             connection: default
             exchange_options: {name: 'mail_update_account', type: direct}
+        mail_enable_account:
+            connection: default
+            exchange_options: {name: 'mail_enable_account', type: direct}
+        mail_disable_account:
+            connection: default
+            exchange_options: {name: 'mail_disable_account', type: direct}
     consumers:
         registration:
             connection: default
@@ -43,3 +49,13 @@ old_sound_rabbit_mq:
             exchange_options: {name: 'mail_update_account', type: direct}
             queue_options: {name: 'mail_update_account'}
             callback: App\Consumer\MailUpdateAccountConsumer
+        mail_enable_account:
+            connection: default
+            exchange_options: {name: 'mail_enable_account', type: direct}
+            queue_options: {name: 'mail_enable_account'}
+            callback: App\Consumer\MailEnableAccountConsumer
+        mail_disable_account:
+            connection: default
+            exchange_options: {name: 'mail_disable_account', type: direct}
+            queue_options: {name: 'mail_disable_account'}
+            callback: App\Consumer\MailDisableAccountConsumer
