--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,3 +27,6 @@ security:
             logout:
                 path: app_logout
                 target: app_login
+
+    access_control:
+        - { path: ^/admin/users, roles: ROLE_ADMIN }
