--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -19,7 +19,22 @@ RUN apt-get update && \
     pecl install apcu-5.1.3 && \
     docker-php-ext-enable apcu && \
     echo "date.timezone = Europe/Paris" >> /usr/local/etc/php/conf.d/symfony.ini && \
-    echo "short_open_tag = Off" >> /usr/local/etc/php/conf.d/symfony.ini
+    echo "short_open_tag = Off" >> /usr/local/etc/php/conf.d/symfony.ini && \
+    pecl install xdebug && echo zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20160303/xdebug.so > /usr/local/etc/php/xdebug.ini.sample
+
+# Blackfire PHP extension
+RUN export VERSION=`php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;"` \
+    && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/${VERSION} \
+    && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
+    && mv /tmp/blackfire-*.so `php -r "echo ini_get('extension_dir');"`/blackfire.so \
+    && rm -f /tmp/blackfire-probe.tar.gz \
+    && echo "extension=blackfire.so\nblackfire.agent_socket=\${BLACKFIRE_PORT}" > $PHP_INI_DIR/conf.d/blackfire.ini
+
+# Blackfire CLI tool
+RUN curl -sL https://packagecloud.io/gpg.key | apt-key add - \
+    && echo "deb http://packages.blackfire.io/debian any main" > /etc/apt/sources.list.d/blackfire.list \
+    && apt-get update && apt-get install --yes blackfire-agent \
+    && rm -rf /var/lib/apt/lists/*
 
 # Yarn
 RUN curl -sL https://deb.nodesource.com/setup_6.x | bash -
@@ -48,4 +63,12 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 COPY install-composer /usr/local/bin/install-composer
 RUN /usr/local/bin/install-composer
 
-RUN usermod -u 1001 www-data
+# Scripts to execute at runtime
+ADD entrypoint.sh /usr/local/bin/entrypoint.sh
+ADD entrypoint.d /usr/local/bin/entrypoint.d
+
+EXPOSE 9000
+
+ENTRYPOINT ["entrypoint.sh"]
+
+CMD  ["php-fpm"]
