Add place admin

--- a/.env.dist
+++ b/.env.dist
@@ -12,6 +12,7 @@ APP_SECRET=f93a7c8a41cbe9e3d80b08db4a534e20
 APP_HOST=web.travelbook
 APP_SCHEME=http
 APP_BASE_URL=
+APP_GOOGLE_API_KEY=AIzaSyAqWrvNEc3cWp-c_Z30LUs0pAugcuKHBmk
 ###< app ###
 
 ###> doctrine/doctrine-bundle ###
