--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,10 @@
     "require": {
         "php": "^7.1.3",
         "api-platform/core": "^2.0",
+        "csa/guzzle-bundle": "^2.0",
         "doctrine/annotations": "^1.4",
         "doctrine/doctrine-migrations-bundle": "^1.2",
+        "friendsofsymfony/jsrouting-bundle": "^1.6",
         "php-amqplib/rabbitmq-bundle": "^1.12",
         "phpdocumentor/reflection-docblock": "^3.2",
         "sensio/framework-extra-bundle": "^3.0",
