--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.10.0",
+        "bootstrap-datetimepicker-sass": "^3.0.3",
         "bootstrap-sass": "^3.3.7",
         "copy-webpack-plugin": "^4.0.1",
+        "easy-autocomplete": "^1.3.5",
         "jquery": "^3.2.1",
+        "moment": "^2.18.1",
         "node-sass": "^4.5.3",
         "sass-loader": "^6.0.6"
-    },
-    "dependencies": {}
+    }
 }
