--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "jquery": "^3.2.1",
         "moment": "^2.18.1",
         "node-sass": "^4.5.3",
-        "sass-loader": "^6.0.6"
+        "sass-loader": "^6.0.6",
+        "slick-carousel": "^1.7.1"
     }
 }
