Add Show pictures

--- a/config/breadcrumb.yaml
+++ b/config/breadcrumb.yaml
@@ -68,3 +68,6 @@ app_travels_create:
 app_travels_add_pictures:
     title: 'breadcrumb.app_travels_add_pictures'
     parent: 'app_travels'
+
+app_pictures:
+    title: 'breadcrumb.app_pictures'
