Improvements logs config

--- a/.env.dist
+++ b/.env.dist
@@ -13,6 +13,7 @@ APP_HOST=web.travelbook
 APP_SCHEME=http
 APP_BASE_URL=
 APP_GOOGLE_API_KEY=AIzaSyAqWrvNEc3cWp-c_Z30LUs0pAugcuKHBmk
+APP_LOGGING_LEVEL=DEBUG
 ###< app ###
 
 ###> doctrine/doctrine-bundle ###
