--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Travel book application, share pictures",
     "require": {
         "php": "^7.1.3",
+        "api-platform/core": "^2.1",
         "csa/guzzle-bundle": "^2.0",
         "doctrine/annotations": "^1.4",
         "doctrine/doctrine-migrations-bundle": "^1.2",
