--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,13 @@
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
+        "behat/behat": "^3.4",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.2",
+        "behat/symfony2-extension": "^2.1",
+        "behatch/contexts": "^2.7",
         "friendsofphp/php-cs-fixer": "^2.3",
+        "knplabs/friendly-contexts": "^0.8.2",
         "phpmetrics/phpmetrics": "^2.2",
         "phpunit/phpunit": "^6.2",
         "sensiolabs/security-checker": "^4.0",
