--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
+        "alexandresalome/mailcatcher": "^1.2",
         "behat/behat": "^3.4",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
